openproject_kubernetes/bkp/nginx-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-proxy
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx-proxy
    spec:
      containers:
      - image: asadullahkhan/nginx-proxy:v1
        imagePullPolicy: ""
        name: container-reverseproxy-compose
        ports:
        - containerPort: 443
        - containerPort: 80
