openproject_kubernetes/bkp/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-proxy
  name: nginx-proxy
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
    nodePort: 32039
  - name: "443"
    port: 443
    targetPort: 443
    nodePort: 30009
  selector:
    io.kompose.service: nginx-proxy
