openproject_kubernetes/bkp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - project.ivolve.com
    secretName: project-tls
  rules:
  - host: project.ivolve.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
